# freebsd-kpi-rs

./: .gitignore  README.md  bindings.c  bindings.h  compiler_builtins.rs  kern.mk  kern.rust.mk  kern.rustroot.mk  kmod.rust.mk
.github/workflows/: aarch64_demos.yml  ci.yml  demos.yml  docs.yml  generate_docs.yml  test.yml  userspace_tests.yml  x86_64_demos.yml
docs/: build_artifacts.md  creating_bindings.md  design_notes.md  getting_started.md  kobj_interfaces.md
kpi/: Cargo.toml  README.md  aarch64_test_bindings.rs  aarch64_virt_bindings.rs  allocator.rs  arm64.rs  bindings.rs  boxed.rs  bus.rs  cell.rs  device.rs  ffi.rs  intr.rs  kobj.rs  lib.rs  lib_rs.swp  macros.rs  ofw.rs  panic.rs  ptr.rs  sleep.rs  sync.rs  taskq.rs  test_bindings.rs  tty.rs  vec.rs  x86_64_generic_bindings.rs  x86_64_test_bindings.rs
kpi/src/: arm64.rs  bindings.rs  boxed.rs  bus.rs  cdev.rs  cell.rs  collections.rs  device.rs  driver.rs  ffi.rs  interfaces.rs  intr.rs  kobj.rs  lib.rs  macros.rs  malloc.rs  module.rs  net.rs  objects.rs  ofw.rs  panic.rs  ptr.rs  sleep.rs  sync.rs  taskq.rs  taskqueue.rs  tests.rs  tty.rs  vec.rs
kpi/src/bus/: dma.rs  mod.rs
kpi/src/ffi/: cstring.rs  lease.rs  mod.rs  subclass.rs
kpi/src/interfaces/: mod.rs  nvme.rs  sound.rs
kpi/src/intr/: intrng.rs  mod.rs
kpi/src/kobj/: casts.rs  define_class.rs  define_interface.rs  macros.rs  method_table.rs  mod.rs
kpi/src/sync/: arc.rs  lease.rs  mod.rs  mtx.rs  sx.rs
patches/: aarch64_disable_bti.diff  add_bindings_c.diff  config_rust_support.diff  ports_lang_rust.diff  rust_mk_integration.diff
(+4 files in other folders)
