[package]
name = "kpi"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
default = ["std"]
# Use libstd instead of libcore to run userspace unit tests
std = []
# flattened devicetree support
fdt = []
# new interrupt framework support
intrng = []
aarch64_tests = ["fdt", "intrng"]
x86_64_tests = []
